--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body{
 
 
 h2{
-    font-size: 20px;
-    line-height: 2.5em;
+    font-size: 30px;
+    line-height: 2em;
     text-decoration: underline;
 }
 
@@ -24,12 +24,16 @@ h3{
     color: rgb(241, 77, 104);
     text-decoration: underline;
     font-weight: bold;
-    line-height: 2em;
+    line-height: 3em;
 
 }
 
 .exp_pro {
     padding-left: 10px;
+}
+
+.exp_item{
+    margin-left: 6px;
 }
 
 .body_background{
@@ -118,6 +122,11 @@ nav{
 
 }
 
+.exp{
+    margin-top: 3px;
+    margin-bottom: 2px;
+}
+
 ul{
     display: flex;
     justify-content: flex-end;
@@ -152,6 +161,8 @@ table,
 td {
     border: 1px solid #333;
     padding: 10px;
+    line-height: 2em;
+
     
 }
 
@@ -159,4 +170,13 @@ thead,
 tfoot {
     background-color: #333;
     color: #fff;
+}
+
+footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    height: 40px;
+    color: white;
+    background-color: black;
 }
